2003-07-29  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
      * src/win32/libgdcmijpeg12.dsp was missing
      * modified gdcm.dsw accordingly
2003-07-28  Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
	   * src/gdcmHeader.cxx : misplaced return 0.; for ACR/NEMA
2003-07-24 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * src/jpeg/libijg12/.cvsignore, jconfig.* : ommited files while last
        commit of JPR (before his hollidays to facilitate our work).
      * setup.py : bug fix in code. Modifications made while the last commit
        of JPR. The code hasn't been tested before the commit... it's so
        useless to make that (for best programmer that is JPR) !!!
2003-07-08  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * tagged the current version as Version0_3 (i.e. version 0.3)
2003-07-08  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * vtk/testvtkGdcmReader.cxx : remove a symbol that is unused
      * src/jpeg/libijg8/jmorecfg.h : adding export symbol for windows
      * *.dsp : modifications to use new libgdcmijpeg8 library
      * setup.py : bug fix on VTKPATH variable
      * PACKAGER : adding all concerning windows
2003-07-07  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmElValSet.cxx, gdcmFile.cxx: JPR bug fix, removal of
        garbage debug code.
      * TODO, vtk/vtkGdcmReader.cxx: upcoming fixes comments.
      * gdcmPython/testSuite.py: JPR bug fix, brutal erasement of
        test suite reported error.
      * PACKAGER file added (describes what a packager must do when
        packaging a new release).
      * MANIFEST.in, now declares jconfig.linux and jconfig.vc
      * configure.in: upgraded version number to 0.3.0
      * fixing build of rpm (through rpm -ta):
        - Doc/Makefile.am exports proper doxygen files
        - src/jpeg/libijg8/Makefile.am exports the include files.
2003-07-07  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>